; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/core/extr_gpuobj.c_nvkm_gpuobj_new.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/core/extr_gpuobj.c_nvkm_gpuobj_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvkm_device = type { i32 }
%struct.nvkm_gpuobj = type { i32 }

@GFP_KERNEL = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nvkm_gpuobj_new(%struct.nvkm_device* %0, i32 %1, i32 %2, i32 %3, %struct.nvkm_gpuobj* %4, %struct.nvkm_gpuobj** %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca %struct.nvkm_device*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca %struct.nvkm_gpuobj*, align 8
  %13 = alloca %struct.nvkm_gpuobj**, align 8
  %14 = alloca %struct.nvkm_gpuobj*, align 8
  %15 = alloca i32, align 4
  store %struct.nvkm_device* %0, %struct.nvkm_device** %8, align 8
  store i32 %1, i32* %9, align 4
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store %struct.nvkm_gpuobj* %4, %struct.nvkm_gpuobj** %12, align 8
  store %struct.nvkm_gpuobj** %5, %struct.nvkm_gpuobj*** %13, align 8
  %16 = load i32, i32* @GFP_KERNEL, align 4
  %17 = call %struct.nvkm_gpuobj* @kzalloc(i32 4, i32 %16)
  %18 = load %struct.nvkm_gpuobj**, %struct.nvkm_gpuobj*** %13, align 8
  store %struct.nvkm_gpuobj* %17, %struct.nvkm_gpuobj** %18, align 8
  store %struct.nvkm_gpuobj* %17, %struct.nvkm_gpuobj** %14, align 8
  %19 = icmp ne %struct.nvkm_gpuobj* %17, null
  br i1 %19, label %23, label %20

20:                                               ; preds = %6
  %21 = load i32, i32* @ENOMEM, align 4
  %22 = sub nsw i32 0, %21
  store i32 %22, i32* %7, align 4
  br label %38

23:                                               ; preds = %6
  %24 = load %struct.nvkm_device*, %struct.nvkm_device** %8, align 8
  %25 = load i32, i32* %9, align 4
  %26 = load i32, i32* %10, align 4
  %27 = load i32, i32* %11, align 4
  %28 = load %struct.nvkm_gpuobj*, %struct.nvkm_gpuobj** %12, align 8
  %29 = load %struct.nvkm_gpuobj*, %struct.nvkm_gpuobj** %14, align 8
  %30 = call i32 @nvkm_gpuobj_ctor(%struct.nvkm_device* %24, i32 %25, i32 %26, i32 %27, %struct.nvkm_gpuobj* %28, %struct.nvkm_gpuobj* %29)
  store i32 %30, i32* %15, align 4
  %31 = load i32, i32* %15, align 4
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %33, label %36

33:                                               ; preds = %23
  %34 = load %struct.nvkm_gpuobj**, %struct.nvkm_gpuobj*** %13, align 8
  %35 = call i32 @nvkm_gpuobj_del(%struct.nvkm_gpuobj** %34)
  br label %36

36:                                               ; preds = %33, %23
  %37 = load i32, i32* %15, align 4
  store i32 %37, i32* %7, align 4
  br label %38

38:                                               ; preds = %36, %20
  %39 = load i32, i32* %7, align 4
  ret i32 %39
}

declare dso_local %struct.nvkm_gpuobj* @kzalloc(i32, i32) #1

declare dso_local i32 @nvkm_gpuobj_ctor(%struct.nvkm_device*, i32, i32, i32, %struct.nvkm_gpuobj*, %struct.nvkm_gpuobj*) #1

declare dso_local i32 @nvkm_gpuobj_del(%struct.nvkm_gpuobj**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
